--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
-
 html, body {
     background-color: #c2c0c0;
     margin: 0;
     padding: 0;
+    overflow-x: hidden; 
 }
 
-h1{
+h1 {
     font-family: 'Creepster', cursive;
 }
 
@@ -70,21 +70,16 @@ h1{
     margin-top: 15px;
 }
 
-
 @media (max-width: 768px) {
     .dialogue,
     .result,
     .feedback {
         padding: 10px 15px; 
-        max-width: 95%; 
-        left: 0; 
-        transform: translate(0, -50%); 
-        top: 100%; 
-        margin-top: 15px;
-    }
-
-    .btn {
-        padding: 8px 16px; 
+        max-width: 90%; 
+        left: 5%; 
+        transform: translate(0, 0); 
+        top: 10%; 
+        margin-top: 10px;
     }
 }
 
@@ -93,11 +88,11 @@ h1{
     .result,
     .feedback {
         padding: 5px 10px; 
-        max-width: 100%; 
-        left: 0; 
+        max-width: 95%; 
+        left: 2.5%; 
+        top: 5%; 
         transform: translate(0, 0); 
-        top: 100%; 
-        margin-top: 10px; 
+        margin-top: 5px;
     }
 
     .btn {
